fix(web-rewards): layout not align footer

--- a/apps/web-rewards/src/app/layout.module.css
+++ b/apps/web-rewards/src/app/layout.module.css
@@ -2,7 +2,7 @@
   display: grid;
   grid-auto-flow: row;
   grid-template-rows: auto 1fr auto;
-  flex: 1;
+  min-height: 100dvh;
   height: 100%;
   width: 100%;
 }
